Correct alignment of page header content

--- a/assets/css/_page-header.scss
+++ b/assets/css/_page-header.scss
@@ -8,16 +8,18 @@
     display: flex;
     height: $size__header-height;
     justify-content: center;
-    padding: 0 1em;
+    left: 0;
     position: fixed;
+    right: 0;
     top: 0;
-    width: 100vw;
     z-index: 100;
 
     &__content {
         align-items: center;
+        box-sizing: border-box;
         display: flex;
         max-width: $width__content;
+        padding: 0 1em;
         width: 100%;
     }
 
